--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -34,7 +34,9 @@
             <%= fields_for @entry do |e| %>
               <%= e.hidden_field :user_id, :value=> @user.id %>
             <% end %>
-            <%= f.submit "チャットを始める" %>
+            <button type="submit">
+              <i class="far fa-envelope message-icon font-weight-bold"></i> メッセージ
+            </button>
           <% end %>
         <% end %>
       <% end %>
